# tmplay

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  run.bat  vcpkg.json
include/: data.hpp  decoder.hpp  maudio.hpp  player.hpp  ui.hpp  utils.hpp
src/: audio.cpp  data.cpp  decoder.cpp  main.cpp  maudio.cpp  player.cpp  ui.cpp
